# BlockchinAttacker-course-work

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config_attacker.json
include/: AttackManager.hpp  AttackerConfig.hpp  AttackerWorker.hpp  BlockInfo.hpp  BlockchainParser.hpp  Globals.hpp  Logging.hpp  PermutationGenerator.hpp  TransactionGenerator.hpp  Utils.hpp  common_attacker.hpp  console_colors.hpp  hash_attacker.hpp
src/: AttackManager.cpp  AttackerConfig.cpp  AttackerWorker.cpp  Globals.cpp  Logging.cpp  PermutationGenerator.cpp  Utils.cpp  main_attacker.cpp
